--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import 'date/import.scss';
-@import 'date/date.scss';
+@import 'data/import.scss';
+@import 'data/data.scss';
 
 html {
   min-height: 100%;
